# Web-Services-Development-with-RAG-MCP

./: .gitignore  README.md  pyproject.toml  rag_bot.py
documents/: company_info.txt  faq.txt  products.txt
